Correct nav items letter-spacing and margin

--- a/src/styles/layouts/_base.sass
+++ b/src/styles/layouts/_base.sass
@@ -40,7 +40,7 @@
 .nav
   display: flex
   font-size: px-to-rem(14px)
-  letter-spacing: px-to-rem(1.4px)
+  letter-spacing: px-to-rem(.5px)
   text-transform: uppercase
   @media(max-width: 1023px)
     bottom: 0
@@ -114,12 +114,6 @@
 
   &__link
     text-decoration: none
-
-    &.gradient-btn
-      margin-right: px-to-rem(5px)
-      @media(max-width: 1023px)
-        margin-right: 0
-
 
     &:not(.gradient-btn)
       color: inherit
